--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,23 +45,23 @@
                 android:id="@+id/mainAgeTextView"
                 android:textAlignment="center"
                 android:textSize="16sp"
-                android:text="TextView"
-
                 android:background="@color/secondaryColor"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="0dp"
+                android:layout_height="28dp"
                 android:layout_weight="2"
                 android:layout_marginHorizontal="8dp"/>
 
             <Button
                 android:id="@+id/mainAgeText4"
-                android:textAlignment="center"
-                android:textSize="16sp"
-                android:text="ic"
-
-                android:layout_marginHorizontal="8dp"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="12dp"
+                android:backgroundTint="@color/secondaryColor"
+                android:textAlignment="center"
+                android:text="@string/calendarButtonText"
+                android:drawableLeft="@drawable/calendar_icon"
+                android:textSize="16sp" />
+
 
         </LinearLayout>
 
@@ -71,35 +71,36 @@
             android:padding="20dp"
             android:background="@color/primaryColor">
 
-            <TextView
-                android:id="@+id/SPINNER"
-                android:text="TextView"
+            <Spinner
+                android:id="@+id/conversionOptionsSpinner"
                 android:textSize="16sp"
-                android:textAlignment="center"
-
-                android:background="@color/secondaryColor"
-                android:layout_marginHorizontal="8dp"
                 android:layout_weight="1"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
+                android:layout_width="0dp"
+                android:layout_height="28dp"
+                android:layout_marginHorizontal="16dp"
+                android:popupBackground="@color/secondaryColor"
+                android:background="@color/secondaryColor"
+                android:textAlignment="center"/>
 
         </LinearLayout>
+
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="16dp"
-            android:text="f"
-            >
+            android:layout_margin="36dp"
+            android:textSize="16sp"
+            android:backgroundTint="@color/primaryColor"
+            android:text="@string/calculateButtonText">
 
         </Button>
-
 
         <TextView
             android:id="@+id/resultTextView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp">
+            android:layout_height="36dp"
+            android:layout_marginTop="100dp"
+            android:background="@color/primaryColor">
 
         </TextView>
 
