--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,6 @@
     android:gravity="center_horizontal">
 
 
-
     <TextView
         android:id="@+id/titleLabel"
         android:layout_width="wrap_content"
@@ -42,17 +41,18 @@
             >
 
             <TextView
-                android:id="@+id/mainAgeTextView"
+                android:id="@+id/chosenAgeTextView"
                 android:textAlignment="center"
                 android:textSize="16sp"
                 android:background="@color/secondaryColor"
                 android:layout_width="0dp"
-                android:layout_height="28dp"
+                android:layout_height="24dp"
                 android:layout_weight="2"
+                android:textColor="@color/white"
                 android:layout_marginHorizontal="8dp"/>
 
             <Button
-                android:id="@+id/mainAgeText4"
+                android:id="@+id/calendarButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
@@ -71,6 +71,8 @@
             android:padding="20dp"
             android:background="@color/primaryColor">
 
+
+
             <Spinner
                 android:id="@+id/conversionOptionsSpinner"
                 android:textSize="16sp"
@@ -86,6 +88,7 @@
 
 
         <Button
+            android:id="@+id/calculateButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="36dp"
