--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -46,7 +46,7 @@
                 android:textSize="16sp"
                 android:background="@color/secondaryColor"
                 android:layout_width="0dp"
-                android:layout_height="24dp"
+                android:layout_height="30dp"
                 android:layout_weight="2"
                 android:textColor="@color/white"
                 android:layout_marginHorizontal="8dp"/>
@@ -57,10 +57,9 @@
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="12dp"
                 android:backgroundTint="@color/secondaryColor"
-                android:textAlignment="center"
                 android:text="@string/calendarButtonText"
                 android:drawableLeft="@drawable/calendar_icon"
-                android:textSize="16sp" />
+                android:textSize="18sp" />
 
 
         </LinearLayout>
@@ -78,7 +77,7 @@
                 android:textSize="16sp"
                 android:layout_weight="1"
                 android:layout_width="0dp"
-                android:layout_height="28dp"
+                android:layout_height="32dp"
                 android:layout_marginHorizontal="16dp"
                 android:popupBackground="@color/secondaryColor"
                 android:background="@color/secondaryColor"
@@ -92,7 +91,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="36dp"
-            android:textSize="16sp"
+            android:textSize="22sp"
             android:backgroundTint="@color/primaryColor"
             android:text="@string/calculateButtonText">
 
@@ -101,8 +100,12 @@
         <TextView
             android:id="@+id/resultTextView"
             android:layout_width="match_parent"
-            android:layout_height="36dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="100dp"
+            android:textColor="@color/white"
+            android:textAlignment="center"
+            android:text="@string/resultDefaultText"
+            android:textSize="24sp"
             android:background="@color/primaryColor">
 
         </TextView>
